--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
+# Mac OS X
+.DS_Store
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+
+# Bin dir
+bin
 
 # Test binary, built with `go test -c`
 *.test
